content/media/webrtc/MediaEngineWebRTC.h
@@ -102,6 +102,7 @@ public:
     , mRotation(0)
     , mBackCamera(false)
     , mCaptureIndex(aIndex)
+    , mTrackID(0)
     , mMediaSource(aMediaSource)
     , mMonitor("WebRTCCamera.Monitor")
     , mWidth(0)
@@ -130,6 +131,7 @@ public:
                                MediaSourceType aMediaSource = MediaSourceType::Camera)
     : mVideoEngine(aVideoEnginePtr)
     , mCaptureIndex(aIndex)
+    , mTrackID(0)
     , mFps(-1)
     , mMinFps(-1)
     , mMediaSource(aMediaSource)
@@ -220,6 +222,12 @@ public:
 protected:
   ~MediaEngineWebRTCVideoSource() { Shutdown(); }
 
+  // guts for appending data to the MSG track
+  virtual bool AppendToTrack(SourceMediaStream* aSource,
+                             layers::Image* aImage,
+                             TrackID aID,
+                             TrackTicks delta);
+
 private:
   // Initialize the needed Video engine interfaces.
   void Init();
@@ -245,6 +253,7 @@ private:
   webrtc::CaptureCapability mCapability; // Doesn't work on OS X.
 
   int mCaptureIndex;
+  TrackID mTrackID;
   int mFps; // Track rate (30 fps by default)
   int mMinFps; // Min rate we want to accept
   MediaSourceType mMediaSource; // source of media (camera | application | screen)
